# mario-remake-sfml

./: Makefile  animatedtile.cpp  animatedtile.h  animation.cpp  animation.h  base.cpp  base.h  basegame.cpp  basegame.h  block.cpp  block.h  breakblockparticle.cpp  breakblockparticle.h  brickblock.cpp  brickblock.h  buzzybeetle.cpp  buzzybeetle.h  camera.cpp  camera.h  coin.cpp  coin.h  enemy.cpp  enemy.h  firesplash.cpp  firesplash.h  flower.cpp  flower.h  fontmanager.cpp  fontmanager.h  framerate.cpp  framerate.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  goomba.cpp  goomba.h  item.cpp  item.h  jumper.cpp  (+65 more)
resources/textures/: Tiles.tsx  s.xml  untitled.tmx
resources/worlds/: AnimTiles.tsx  Tiles.tsx  world-1-1-underground.tmx  world-1-1.tmx  world-test-2.tmx  world-test.tmx
